ChangeLog


**** Release 0.8.0 ****

20032807
	-examples/*
	Added some examples.
	
	Liam Girdwood

20032703
	-src/lunar.c
	Fixed some documentation errors in lunar phase and disk.
	
	Kimura Fuyuku, Liam Girdwood

20032703
	-src/julian_day.c
	Fixed bug stopping get_julian_day() changing parameter.
	
	Kimura Fuyuku, Liam Girdwood

20032803
	-src/libnova.h, libnova.c
	Added sign member to struct ln_dms to represent small negative angles.
	
	John R. Thorstensen, Liam Girdwood


**** Release 0.7.0 ****

20032203
	-src/lunar.c, libnova.h
	Added Lunar longitudes for ascending node and perigee.
	
	Liam Girdwood

20030303
	-src/libnova.h
	typo - cant spell jupiter at line 1148
	
	Arsita Chetan, Liam Girdwood

20030226
	-src/mercury.c - pluto.c, transform.c, solar.c, lunar.c
	replaced atan() with atan2() to remove quadrant errors.
	
	Asrita Chetan, Liam Girdwood

20030226
	-src/transform.c
	ra not in correct quadrant for hrz<->equ coords transformation
	
	Asrita Chetan, Liam Girdwood


20030224
	-macros/libnova-check.m4
	fixed compilation problem with gcc 3.2
	
	-macros/Makefile.am
	Added install rule for libnova-check.m4
	Removed unused macros
	
	Liam Girdwood

20030126
	-src/parabolic_motion.c, src/elliptic_motion.c
	Put true anomaly in correct quadrant.
	
	-* Various
	Doxygen documentation updates.
	
	-src/mercury - pluto.c
	Added Heliocentrcic rectangular coords.
	
	Liam Girdwood

20030123
	-ln_test/test.c
	Fixed parabolic tests
	Added test results
	
	Liam Girdwood

20030118
	-src/mercury .. pluto.c, lunar.c, parabolic_motion.c, elliptic_motion.c
	Fixed error in calculation of JD_UT for rise,transit, set times.

	Petr Kubanek, Liam Girdwood

20030117
	-src/parabolic_motion.c
	Change true anomaly to degrees.
	Fixed object elongation.
	
	-src/elliptic_motion.c
	added get_ell_body_elong();
	
	Liam Girdwood

20030117
	-src/rise_set.c, src/libnova.h
	Added get_object_next_rst function.

	Petr Kubanek

20030116

	-src/parabolic_motion.c, src/elliptic_motion.c