@@ -16,6 +16,5 @@ Danie Malan,
 Herbert Straub,
 Asrita Chetan,
 John R. Thorstensen,
-Kimura Fuyuki
-
-
+Kimura Fuyuki,
+Kirill Ponomarew
